--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-    "name": "tailwind-merge",
-    "version": "2.6.0",
+    "name": "@VlaydDetect/tailwind-merge",
+    "version": "2.6.1",
     "description": "Merge Tailwind CSS classes without style conflicts",
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/VlaydDetect"
+    },
     "keywords": [
         "tailwindcss",
         "tailwind",
@@ -13,14 +16,7 @@
         "conflict",
         "override"
     ],
-    "homepage": "https://github.com/dcastil/tailwind-merge",
-    "bugs": {
-        "url": "https://github.com/dcastil/tailwind-merge/issues"
-    },
-    "funding": {
-        "type": "github",
-        "url": "https://github.com/sponsors/dcastil"
-    },
+    "homepage": "https://github.com/VlaydDetect/tailwind-merge",
     "license": "MIT",
     "author": "Dany Castillo",
     "files": [
@@ -44,10 +40,6 @@
     },
     "main": "./dist/bundle-cjs.js",
     "types": "./dist/types.d.ts",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/dcastil/tailwind-merge.git"
-    },
     "sideEffects": false,
     "scripts": {
         "build": "rollup --config scripts/rollup.config.mjs",
@@ -56,11 +48,8 @@
         "test:watch": "vitest --config scripts/vitest.config.mts",
         "test:exports": "node scripts/test-built-package-exports.cjs && node scripts/test-built-package-exports.mjs",
         "lint": "eslint --max-warnings 0 '**'",
-        "preversion": "if [ -n \"$DANYS_MACHINE\" ]; then git checkout main && git pull; fi",
-        "version": "zx scripts/update-readme.mjs",
-        "postversion": "if [ -n \"$DANYS_MACHINE\" ]; then git push --follow-tags && open https://github.com/dcastil/tailwind-merge/releases; fi"
+        "release": "standard-version && git push --follow-tags && npm publish"
     },
-    "dependencies": {},
     "devDependencies": {
         "@babel/core": "^7.26.0",
         "@babel/preset-env": "^7.26.0",
@@ -79,13 +68,11 @@
         "rollup": "^4.29.1",
         "rollup-plugin-delete": "^2.1.0",
         "rollup-plugin-dts": "^6.1.1",
+        "standard-version": "^9.5.0",
         "tslib": "^2.8.1",
         "typescript": "^5.7.2",
         "typescript-eslint": "^8.19.0",
         "vitest": "^2.1.8",
         "zx": "^8.3.0"
-    },
-    "publishConfig": {
-        "provenance": true
     }
 }
