--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "conflict",
         "override"
     ],
-    "homepage": "https://github.com/VlaydDetect/tailwind-merge",
+    "homepage": "https://github.com/VlaydCorporation/tailwind-merge",
+    "repository": "https://github.com/VlaydCorporation/tailwind-merge",
     "license": "MIT",
     "author": "Dany Castillo",
     "files": [
@@ -48,7 +49,7 @@
         "test:watch": "vitest --config scripts/vitest.config.mts",
         "test:exports": "node scripts/test-built-package-exports.cjs && node scripts/test-built-package-exports.mjs",
         "lint": "eslint --max-warnings 0 '**'",
-        "release": "standard-version && git push --follow-tags && npm publish"
+        "release": "standard-version && git push --follow-tags && npm unpublish"
     },
     "devDependencies": {
         "@babel/core": "^7.26.0",
