--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "@VlaydDetect/tailwind-merge",
+    "name": "@VlaydCorporation/tailwind-merge",
     "version": "2.6.2",
     "description": "Merge Tailwind CSS classes without style conflicts",
     "publishConfig": {
-        "registry": "https://npm.pkg.github.com/VlaydDetect"
+        "registry": "https://npm.pkg.github.com/VlaydCorporation"
     },
     "keywords": [
         "tailwindcss",
@@ -16,7 +16,8 @@
         "conflict",
         "override"
     ],
-    "homepage": "https://github.com/VlaydDetect/tailwind-merge",
+    "homepage": "https://github.com/VlaydCorporation/tailwind-merge",
+    "repository": "https://github.com/VlaydCorporation/tailwind-merge",
     "license": "MIT",
     "author": "Dany Castillo",
     "files": [
